plugins {
    id 'org.springframework.boot' version '4.0.2' apply false
    id 'io.spring.dependency-management' version '1.1.7' apply false
    id 'com.github.node-gradle.node' version '7.1.0' apply false
}

allprojects {
    group = 'com.advertmarket'
    version = '0.1.0-SNAPSHOT'

    repositories {
        mavenCentral()
    }
}

subprojects {
    plugins.withType(JavaPlugin) {
        java {
            toolchain {
                languageVersion = JavaLanguageVersion.of(25)
            }
        }

        tasks.withType(JavaCompile).configureEach {
            options.encoding = 'UTF-8'
            options.compilerArgs.addAll(['--enable-preview'])
        }

        tasks.withType(Test).configureEach {
            useJUnitPlatform()
            jvmArgs '--enable-preview'
        }

        tasks.withType(JavaExec).configureEach {
            jvmArgs '--enable-preview'
        }
    }
}
